--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
@@ -6193,15 +6193,15 @@ html:not(.touch) .editable-item:hover {
         .vacancies-summary li figure.data .count {
           padding: .25em 0;
           font-family: "ntatabularnumbers", "nta", Arial, sans-serif;
-          font-size: 80px;
-          line-height: 1;
+          font-size: 48px;
+          line-height: 1.04167;
           font-weight: 400;
           text-transform: none;
           font-weight: 700; } }
   @media screen and (max-width: 640px) and (max-width: 640px) {
     .vacancies-summary li figure.data .count {
-      font-size: 53px;
-      line-height: 1.03774; } }
+      font-size: 32px;
+      line-height: 1.09375; } }
       @media screen and (max-width: 768px) {
         .vacancies-summary li figure.data .count {
           font-family: "ntatabularnumbers", "nta", Arial, sans-serif;
@@ -6253,6 +6253,48 @@ html:not(.touch) .editable-item:hover {
         @media screen and (min-width: 769px) {
           .vacancies-summary li figure.data figcaption h2 {
             text-align: center; } }
+
+@media screen and (max-width: 768px) {
+  table#vacancies-table {
+    border-top: 1px solid #bfc1c3;
+    display: block; }
+    table#vacancies-table thead {
+      display: none; }
+    table#vacancies-table tr {
+      display: block;
+      border-bottom: 1px solid #bfc1c3;
+      padding: 1em 0; }
+      table#vacancies-table tr td {
+        display: block;
+        text-align: left;
+        border: none;
+        padding: 0.25em 0; }
+        table#vacancies-table tr td.vac-toolbox {
+          padding: 1em 0; }
+        table#vacancies-table tr td .vac-title {
+          font-family: "nta", Arial, sans-serif;
+          font-size: 19px;
+          line-height: 1.31579;
+          font-weight: 400;
+          text-transform: none;
+          font-weight: 700; } }
+        @media screen and (max-width: 768px) and (max-width: 640px) {
+          table#vacancies-table tr td .vac-title {
+            font-size: 16px;
+            line-height: 1.25; } }
+
+@media screen and (max-width: 768px) {
+        table#vacancies-table tr td.vac-employer:before, table#vacancies-table tr td.vac-ref-number:before, table#vacancies-table tr td.vac-no-of-applications:before {
+          content: attr(data-label) ": ";
+          font-family: "nta", Arial, sans-serif;
+          font-size: 16px;
+          line-height: 1.25;
+          font-weight: 300;
+          text-transform: none;
+          font-weight: 700; } }
+        @media screen and (max-width: 768px) and (max-width: 640px) {
+          table#vacancies-table tr td.vac-employer:before, table#vacancies-table tr td.vac-ref-number:before, table#vacancies-table tr td.vac-no-of-applications:before {
+            font-size: 14px; } }
 
 .applicant-location,
 .applicant-distance {
