--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/css/main.css
@@ -6168,12 +6168,15 @@ html:not(.touch) .editable-item:hover {
     float: left; }
     @media screen and (max-width: 640px) {
       .vacancies-summary li {
+        padding: 0 10px;
         width: 100%; } }
     @media screen and (min-width: 641px) and (max-width: 768px) {
       .vacancies-summary li {
+        padding: 0 10px 0 0;
         width: 33.33333%; } }
     @media screen and (min-width: 769px) {
       .vacancies-summary li {
+        padding: 0 10px 0 0;
         width: 16.66667%; } }
     .vacancies-summary li a {
       text-decoration: none; }
@@ -6229,16 +6232,15 @@ html:not(.touch) .editable-item:hover {
           margin-right: 10px; } }
       .vacancies-summary li figure.data figcaption h2 {
         font-family: "nta", Arial, sans-serif;
-        font-size: 19px;
-        line-height: 1.31579;
-        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.25;
+        font-weight: 300;
         text-transform: none;
         font-weight: 700;
         margin-bottom: 0; }
         @media (max-width: 640px) {
           .vacancies-summary li figure.data figcaption h2 {
-            font-size: 16px;
-            line-height: 1.25; } }
+            font-size: 14px; } }
         @media screen and (max-width: 640px) {
           .vacancies-summary li figure.data figcaption h2 {
             font-family: "nta", Arial, sans-serif;
