--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/modules/_vacancy.scss
@@ -28,11 +28,11 @@ html:not(.touch) .editable-item {
 }
 
 .fa-flag {
-    color: $mauve;
+    color: $light-blue;
 }
 
 .fa-check {
-    color: $green;
+    color: $turquoise;
 }
 
 .raa-icon-comment {
