--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/main.css
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/main.css
@@ -6137,10 +6137,10 @@ html:not(.touch) .editable-item:hover {
     visibility: visible; }
 
 .fa-flag {
-  color: #6f72af; }
+  color: #2b8cc4; }
 
 .fa-check {
-  color: #006435; }
+  color: #28a197; }
 
 .raa-icon-comment {
   font-size: 19px !important;
