Minor bugfix for number of applications

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -208,7 +208,7 @@
                                 <td class="vac-no-of-applications" data-label="Number of applications">
                                     @if (vacancy.Status == ProviderVacancyStatuses.Live)
                                     {
-                                        <span>X applications</span>
+                                        <span>0 applications</span>
                                     }
                                     else
                                     {
