Filled in comments always shown expanded (FireFox)

--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Comment.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Comment.cshtml
@@ -2,7 +2,7 @@
 
 @if (!string.IsNullOrEmpty(Model))
 {
-    <details open>
+    <details class="open" open>
         <summary>Comment</summary>
         <div class="detail-content qa-comment">
             <div class="blocklabel-single-container">
