Reference number no longer editable

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
@@ -223,10 +223,9 @@
                         <a href="#" class="edit-comment-link">Edit</a>
                     </div>
 
-                    <div class="editable-item">
+                    <div>
                         <h3 class="bold-small">Reference number</h3>
                         <p id="vacancy-reference-id">@Model.VacancyReferenceNumber</p>
-                        <a href="#" class="edit-comment-link">Edit</a>
                     </div>
                 </div>
             </div>
