Edit/comment links now honor tabbing. Needs Kali check

--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/modules/_vacancy.scss
@@ -16,13 +16,16 @@
 
 html:not(.touch) .editable-item {
     .edit-comment-link {
-        visibility: hidden;
-    }
+        color: white;
+        &:focus {
+            color: #005ea5;
+        }
+    }       
     &:hover {
         background: rgba( 0, 0, 0, .025 );
         outline: 1px dotted #d4d4d4;
         .edit-comment-link {
-            visibility: visible;
+            color: #005ea5;
         }
     }
 }
